--- a/src/test/java/resources/application.yml
+++ b/src/test/java/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
-  profiles:
-    active: test
+  profiles: test
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
